--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-torch==1.2.0
-torchvision==0.4.0 -f https://download.pytorch.org/whl/torch_stable.html
+timm
 numpy>=1.16.5
 scipy>=1.3.0
-opencv-python
+opencv-python==4.3.0.38
 gdown
 pillow==6.2.2
 gradio
+tensorboard
+tensorboardX
